:bug: chore: why add eslint config for a specif directory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "source.fixAll.eslint": "explicit"
     },
     "editor.formatOnSave": true,
+    // The eslint config for a monorepo is important here to IDEs recognize the correct paths
     "eslint.nodePath": "./frontend/node_modules",
     "eslint.workingDirectories": [
         "./frontend"
