:bug: chore: lint ./src

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -11,8 +11,9 @@ start:
 ## Run the linter
 .PHONY: lint
 lint:
-	npx eslint .
+	npx eslint ./src/
 
+## Build the project
 .PHONY: build
 build:
 	npm run build
