--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    command: poetry run uvicorn src.main:app --reload --port 8000
+    command: poetry run uvicorn src.main:app --reload --host 0.0.0.0 --port 8000 --reload
   postgres:
     image: postgres:14
     environment:
