:sparkles: add sqlalchemy async

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -9,7 +9,7 @@ ARG POETRY_VERSION
 
 RUN pip install poetry==${POETRY_VERSION}
 
-WORKDIR /app
+WORKDIR /backend
 
 COPY pyproject.toml poetry.lock ./
 
@@ -21,4 +21,4 @@ RUN poetry install --no-dev --no-interaction
 
 EXPOSE 8000
 
-COPY . /app
+COPY . /backend
