--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -10,15 +10,16 @@ services:
         PYTHON_VERSION: ${PYTHON_VERSION}
         POETRY_VERSION: ${POETRY_VERSION}
     environment:
-      POLICYCRAFT_POSTGRES_URL: postgres://postgres:postgres@postgres:5432/contractus?sslmode=disable
+      # to use postgres and asyncpq, we need to set it up in the DB URL
+      POLICYCRAFT_POSTGRES_URL: postgresql+asyncpg://postgres:postgres@postgres:5432/policycraft
     volumes:
-      - .:/app/src
+      - .:/backend
     ports:
       - 8000:8000
     depends_on:
       postgres:
         condition: service_healthy
-    command: poetry run uvicorn src.main:app --reload --host 0.0.0.0 --port 8000 --reload
+    command: poetry run uvicorn main:app --reload --host 0.0.0.0 --port 8000 --reload
   postgres:
     image: postgres:14
     environment:
