--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = {extras = ["standard"], version = "^0.28.0"}
 alembic = "^1.13.1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
 asyncpg = "^0.29.0"
+pydantic = "^2.6.3"
 
 
 [build-system]
