:sparkles: feat: save policy + postgres test setup

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,11 +1,14 @@
 # TOOLS VERSIONS
-export GO_VERSION=1.21.5
-export GOLANGCI_LINT_VERSION=v1.55.2
+export GO_VERSION=1.22.1
+export GOLANGCI_LINT_VERSION=v1.56.2
+
 devimage=policycraft-dev
 gopkg=$(devimage)-gopkg
 gocache=$(devimage)-gocache
 devrun=docker-compose run --rm policycraft
 image=perebaj
+
+# to enable the tracking of the service version, we can use the git commit hash
 version=$(shell git rev-parse --short HEAD)
 
 ## run all tests. Usage `make test` or `make test testcase="TestFunctionName"` to run an isolated tests
@@ -29,7 +32,7 @@ integration-test:
 ## Calculate code coverage
 .PHONY: coverage
 coverage:
-	go test ./... -coverprofile=c.out 
+	go test ./... -coverprofile=c.out
 	go tool cover -html=c.out
 
 ## builds the service
@@ -45,7 +48,7 @@ run: service
 ## lint the whole project
 .PHONY: lint
 lint:
-	go run github.com/golangci/golangci-lint/cmd/golangci-lint@$(GOLANGCI_LINT_VERSION) run ./... 
+	go run github.com/golangci/golangci-lint/cmd/golangci-lint@$(GOLANGCI_LINT_VERSION) run ./...
 	go run golang.org/x/vuln/cmd/govulncheck@latest ./...
 
 
@@ -108,6 +111,47 @@ dev/cleanup:
 dev:
 	@$(devrun) bash
 
+## Create a new migration, use make migration/new name=<migration_name>
+.PHONY: migration/new
+migration/new: param-name
+	@echo "Creating new migration..."
+	go run github.com/golang-migrate/migrate/v4/cmd/migrate \
+		create \
+		-dir ./postgres/migrations \
+		-ext sql \
+		-seq \
+		$(name)
+
+## Run migrations
+.PHONY: migration/up
+migration/up: param-POLICYCRAFT_POSTGRES_URL
+	@echo "Running migration up..."
+	go run --tags postgres github.com/golang-migrate/migrate/v4/cmd/migrate \
+		-path=./postgres/migrations \
+		-database=$(POLICYCRAFT_POSTGRES_URL) \
+		-verbose \
+		up
+
+## Step down a single migration
+.PHONY: migration/down
+migration/down: param-POLICYCRAFT_POSTGRES_URL
+	@echo "Running migration down..."
+	go run --tags postgres github.com/golang-migrate/migrate/v4/cmd/migrate \
+		-path=./postgres/migrations \
+		-database=$(POLICYCRAFT_POSTGRES_URL) \
+		-verbose \
+		down 1
+
+## Drop the database
+.PHONY: migration/drop
+migration/drop: param-POLICYCRAFT_POSTGRES_URL
+	@echo "Running migration drop..."
+	go run --tags postgres github.com/golang-migrate/migrate/v4/cmd/migrate \
+		-path=./postgres/migrations \
+		-database=$(POLICYCRAFT_POSTGRES_URL) \
+		-verbose \
+		drop
+
 ## Display help for all targets
 .PHONY: help
 help:
@@ -120,3 +164,10 @@ help:
 			} \
 	} \
 	{ lastLine = $$0 }' $(MAKEFILE_LIST)
+
+### param-% it's an easy way to pass parameters to make targets(commands)
+param-%:
+	@ if [ "${${*}}" = "" ]; then \
+		echo "Param \"$*\" is missing, use: make $(MAKECMDGOALS) $*=<value>"; \
+		exit 1; \
+	fi
