:bug: chore: go lint + export 8080

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.8"
 services:
   policycraft:
     image: policycraft:dev
+    ports:
+      - 8080:8080
     build:
       context: .
       dockerfile: ./Dockerfile.dev
