--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.16.0",
     "reactflow": "^11.9.4",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
@@ -34,6 +36,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.17",
